--- a/_config.yml
+++ b/_config.yml
@@ -1,54 +1,71 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# Welcome to DanDon01's Blog Config
+# =================================
 
-title: DanDon01 Github Blog
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-twitter_username: jekyllrb
-github_username:  jekyll
+# Site Settings
+title: "DanDon01's Tech Blog"
+email: ""
+description: >-
+  A space where I share my projects, thoughts, and experiments in tech, 
+  coding, and life. Follow along for cool Python scripts and electronics builds.
+baseurl: "" # Leave blank for root URL
+url: "https://DanDon01.github.io" # Live site URL
 
-# Build settings
+# Social Links
+X_username: AI_TechnoKing
+github_username:  DanDon01
+linkedin_username: dandon01
+
+# Theme Settings
 theme: minima
+minima:
+  skin: dark
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Customisation
+show_excerpts: true # Show post previews on homepage
+paginate: 5 # Number of posts per page
+
+# Build Plugins
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-paginate
+
+# SEO and Site Metadata
+author: "DanDon01"
+keywords: "tech blog, Python projects, 3D printing, Raspberry Pi, coding tutorials"
+language: "en"
+
+# Header/Footer Customisation
+footer_links:
+  - title: "GitHub"
+    url: "https://github.com/DanDon01"
+    icon: "github"
+
+
+# Navigation (Custom Menu Links)
+navigation:
+  - title: "Home"
+    url: "/"
+  - title: "Projects"
+    url: "/projects"
+  - title: "About"
+    url: "/about"
+  - title: "Contact"
+    url: "/contact"
+
+# Exclude Unnecessary Files
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+
+# A Techy Touch: Build Information
+build_timestamp: "{{ site.time | date: '%Y-%m-%d %H:%M:%S' }}"
